Added about compamny page

--- a/company_web_page.html
+++ b/company_web_page.html
@@ -13,7 +13,7 @@
 
 <HR>
 
-If you want to know more click here 
+If you want to know more click here: 
 <a href="about_company.html">About Us</a>
 
 <H1>This is a Header</H1>
